other-mpol/add-pod-priorityclassname/.kyverno-test/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blank
  namespace: foo
  labels:
    app: blank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blank
  template:
    metadata:
      labels:
        app: blank
    spec:
      containers:
      - image: sfsdafasdfsadfsadf
        name: busybox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second
  namespace: production
  labels:
    app: second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
      - image: sfsdafasdfsadfsadf
        name: busybox
